react-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-proxy
