react-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: default
spec:
  rules:
  - host: "localhost"  # Use the IP or a local DNS name
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
